--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'java'
+apply plugin: 'maven'
+group = 'com.github.rchampa'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
