--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile "commons-io:commons-io:2.4"
-    compile "com.googlecode.json-simple:json-simple:1.1"
+    compile "org.json:org.json:chargebee-1.0"
 }
 
