--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,12 @@ apply plugin: 'maven'
 
 group = 'com.github.rchampa'
 
+sourceCompatibility = 1.7 // java 7
+targetCompatibility = 1.7
+
 repositories {
     mavenCentral()
 }
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.squareup.okhttp:okhttp:2.5.0'
